tests/files/success/type_inference_fails_omega.boat
# (lambda(x): x(x) end)(lambda(x): x(x) end)