tests/files/error/addition_bad_first_arg.boat
def f(x):
    true
end

f(10) + 2
